tests/ui/resolve/issue-117920.stderr
error[E0433]: too many leading `super` keywords within `crate`
  --> $DIR/issue-117920.rs:3:5
   |
LL | use super::A;
   |     ^^^^^ this `super` would go above the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
